<resources>
    <string name="app_name">Book app</string>


    <string name="login">Login</string>
    <string name="name">Isim</string>
    <string name="password">Passpord</string>
    <string name="confirm_password">Passportni tasdiqlash</string>
    <string name="register">ro\'yhatdan o\'tish</string>
    <string name="books">Kitoblar</string>
    <string name="favorite">Sevimlilar</string>
    <string name="saved">Saqlangan</string>
    <string name="profile">Profil</string>

    <string name="account">Akkount</string>
    <string name="change_account_name">Foydalanuvchi nomini o\'zgartrish</string>
    <string name="change_image">Akkount rasmini o\'zgartrish </string>
    <string name="help"><![CDATA[Help & Feedback]]></string>
    <string name="support_us">Qo\'llab quvvatlash uchun</string>
    <string name="about_us">Biz haqimizda </string>
    <string name="contact_us">Dasturchi bilan aloqa</string>
    <string name="error">Xatolik</string>
    <string name="cancel">Bekor qilish</string>
    <string name="message">Xabar</string>
    <string name="already_register">Alla qachon ro\'yhatdan o\'tgan bo\'lsanggiz</string>
    <string name="not_register">Hali ro\'yhatdan o\'tmagansiz?</string>

    <string name="error_password_input">Parolni tekshirishda xatolik yuz berdi</string>
    <string name="downloading">Yuklaniyapdi</string>
    <string name="start_reading">o\'qishni boshlash</string>
    <string name="about">Kitob haqida qisqacha</string>
    <string name="save">Saqlash</string>
    <string name="download">Yuklash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>