<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textSize="24sp"
        android:textColor="@color/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_app"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="16dp"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_app"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:padding="16dp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_not_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="?selectableItemBackground"
        android:padding="8dp"
        android:text="@string/not_register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/input_password"
        app:layout_constraintTop_toBottomOf="@id/input_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_btn_app"
        android:fontFamily="@font/poppins_semibold"
        android:letterSpacing="0.1"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="@color/text"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>